--- a/views/main.scss
+++ b/views/main.scss
@@ -38,20 +38,20 @@
 }
 .emoji_char:hover {
   @include box-shadow(inset 0 0 30px pink);
-  @include transition(all 0s);
+  @include transition(box-shadow 0s);
 }
-.highlight_score_update {
+.highlight_score_update_trans {
   color: red;
   background-color: lightgreen;
   @include transition(all 0s);
-  //@include animation(highlight 0.75s linear);
 }
-
+.highlight_score_update_anim {
+  @include animation(highlight 0.75s linear);
+}
 @include keyframes(highlight) {
   from {
     color: red;
     background-color: lightgreen;
-    // opacity: 1.0;
   }
 }
 
@@ -130,11 +130,11 @@ body.disco {
 .emoji_char.disco {
   opacity: 0.1;
 }
-.highlight_score_update.disco {
-    color: red;
-    background-color: lightgreen;
-    opacity: 0.9;
-  //@include animation(disco-highlight 0.75s linear);
+.highlight_score_update_trans.disco {
+  opacity: 0.9;
+}
+.highlight_score_update_anim.disco {
+  @include animation(disco-highlight 0.75s linear);
 }
 @include keyframes(disco-highlight) {
   from {
