first rough structure for benchmarking

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -20,6 +20,10 @@ html
     link href='/assets/main.css' rel='stylesheet'
     script src='/application.js'
 
+    /benchmark stuff (TODO: conditional me)
+    script src='/vendor/fpsmeter/fpsmeter.js'
+    script src='/benchmark.js'
+
   body
     div.navbar.navbar-static-top
       div.navbar-inner
