--- a/views/layout.slim
+++ b/views/layout.slim
@@ -22,6 +22,7 @@ html
 
     /benchmark stuff (TODO: conditional me)
     - if @benchmark_mode
+      script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'
       script src='/vendor/fpsmeter/fpsmeter.js'
       script src='/benchmark.js'
 
