fix heading name

--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -44,7 +44,7 @@ div.container
           div.row
             div.span6#raw
               h3
-                | detail streamer&nbsp;
+                | raw score streamer&nbsp;
                 small
                   strong.num N
                   | &nbsp;total stream(s)
