fix emoji tab display on chrome

--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -73,6 +73,24 @@ div.container
 
 
 
+javascript:
+  if (!String.fromCodePoint) {
+    /*!
+     * ES6 Unicode Shims 0.1
+     * (c) 2012 Steven Levithan <http://slevithan.com/>
+     * MIT License
+     **/
+    String.fromCodePoint = function fromCodePoint () {
+      var chars = [], point, offset, units, i;
+      for (i = 0; i < arguments.length; ++i) {
+        point = arguments[i];
+        offset = point - 0x10000;
+        units = point > 0xFFFF ? [0xD800 + (offset >> 10), 0xDC00 + (offset & 0x3FF)] : [point];
+        chars.push(String.fromCharCode.apply(null, units));
+      }
+      return chars.join("");
+    }
+  }
 
 coffee:
   pickPlatformIcon = (agent) ->
@@ -86,7 +104,7 @@ coffee:
 
   tagRender = (tag) ->
     return "-" if tag == null
-    emoji_char = "&#x" + tag
+    emoji_char = String.fromCodePoint parseInt(tag, 16)
     "<span class='label label-info'>#{emoji_char} #{tag}</span>"
 
   renderData = (response) ->
