add links to god tools in nav

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -38,6 +38,11 @@ html
             ul.dropdown-menu
               li
                 a href="#aboutview" data-toggle="modal" About EmojiTracker
+              li.divider
+              li
+                a href="/subscribe/admin" GOD: Stream Admin
+              li
+                a href="/benchmark" GOD: FPS Benchmark
 
     == yield
 
