more descriptive text in admin

--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -20,7 +20,7 @@ div.container
                 | eps score streamer&nbsp;
                 small
                   strong.num N
-                  | &nbsp;total stream(s)
+                  | &nbsp;open stream(s)
               table.table.table-striped
                 thead
                   tr
@@ -34,7 +34,7 @@ div.container
                 | detail streamer&nbsp;
                 small
                   strong.num N
-                  | &nbsp;total stream(s)
+                  | &nbsp;open stream(s)
               table.table.table-striped
                 thead
                   tr
@@ -49,7 +49,7 @@ div.container
                 | raw score streamer&nbsp;
                 small
                   strong.num N
-                  | &nbsp;total stream(s)
+                  | &nbsp;open stream(s)
               table.table.table-striped
                 thead
                   tr
@@ -63,7 +63,7 @@ div.container
                 | admin tool streamer&nbsp;
                 small
                   strong.num N
-                  | &nbsp;total stream(s) - so meta!
+                  | &nbsp;open stream(s) - so meta!
               table.table.table-striped
                 thead
                   tr
@@ -76,7 +76,9 @@ div.container
             li.icon-refresh
             | &nbsp;force refresh
         div.tab-pane#event_log
-          h3 event log
+          h3
+            | realtime event log&nbsp;
+            small reminder: only shows what happens while this window session is active
           table.table
             thead
               tr
