admin name is obnoxious

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -40,9 +40,9 @@ html
                 a href="#aboutview" data-toggle="modal" About EmojiTracker
               li.divider
               li
-                a href="/subscribe/admin" GOD: Stream Admin
+                a href="/subscribe/admin" Admin: Stream Pool
               li
-                a href="/benchmark" GOD: FPS Benchmark
+                a href="/benchmark" Admin: FPS Benchmark
 
     == yield
 
