--- a/views/layout.slim
+++ b/views/layout.slim
@@ -38,11 +38,12 @@ html
             ul.dropdown-menu
               li
                 a href="#aboutview" data-toggle="modal" About EmojiTracker
-              li.divider
-              li
-                a href="/subscribe/admin" Admin: Stream Pool
-              li
-                a href="/benchmark" Admin: FPS Benchmark
+              - if is_development?
+                li.divider
+                li
+                  a href="/subscribe/admin" Admin: Stream Pool
+                li
+                  a href="/benchmark" Admin: FPS Benchmark
 
     == yield
 
