less info on iphone

--- a/views/details.slim
+++ b/views/details.slim
@@ -4,7 +4,7 @@ div.container
 
   div.container-fluid
     div.row-fluid
-      section#details.span3
+      section#details.span3.hidden-phone
         h3 details
         table
           dl
