--- a/views/index.slim
+++ b/views/index.slim
@@ -35,7 +35,8 @@ div#disclaimer.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
     / button.close type="button" data-dismiss="modal" aria-hidden="true" title="close" &times;
     h3 Epilepsy Warning
   div.modal-body
-    p emojitracker is an experiment in realtime visualization of all emoji symbols used on twitter.
+    p
+     | <strong>emojitracker</strong> is an experiment in realtime visualization of all emoji symbols used on twitter.
     p it updates at the speed of updates on twitter in realtime, and thus contains rapidly updating visuals that may possibly cause problems for those sensitive to such things?  I'm not sure, but I don't want to risk it, so here is a warning!
   div.modal-footer
     a#okbtn.btn.btn-primary href="#" data-dismiss="modal" Proceed
