--- a/views/index.slim
+++ b/views/index.slim
@@ -56,7 +56,7 @@ coffee:
       $('#detailview #jsonbtn').prop 'href', "/api/details/#{char_id}"
 
       #construct permalink url
-      permalink = document.URL + "details/#{char_id}"
+      permalink = "http://emojitracker.com/details/#{char_id}" #document.URL + "details/#{char_id}"
 
       #replace tweet button with new one
       $('#tweetbtn').empty()
