--- a/views/main.scss
+++ b/views/main.scss
@@ -101,7 +101,7 @@ blockquote p {
   color: lightgray;
 }
 /* fuck it lets just force proper alignment of the damn twitter button */
-.twitter-count-horizontal {
+.modal-footer .twitter-count-horizontal {
   position: relative;
   top: 6px;
   left: 22px;
