cleanup unused conditionals

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -21,9 +21,8 @@ html
     link href='/assets/main.css' rel='stylesheet'
     script src='/application.js'
 
-    /benchmark stuff (TODO: conditional me)
+    /benchmark stuff
     - if @benchmark_mode
-      / script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.4/underscore-min.js'
       script src='/vendor/fpsmeter/fpsmeter.js'
       script src='/benchmark.js'
 
