move easter egg completely into local and js
no need to hide the files anymore perhaps.. if a big deal we can move
to streaming audio and not keep the mp3s in src

--- a/views/main.scss
+++ b/views/main.scss
@@ -127,7 +127,7 @@ blockquote p {
 #discoball {
   width: 310px;
   height: 350px;
-  background-image: url('http://mroth.info/disco/discoball.gif');
+  background-image: url('/disco/discoball.gif');
   background-color: transparent;
   position: fixed;
   top: -350px;
