tiny footer tweak
collaboration X instead of "and", and peg to emojifont restricted so
heart is emoji on ios

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -59,8 +59,8 @@ html
 
     hr
     div.container.hide#footer
-      p#footline
-        | :dizzy:<a href="http://twitter.com/emojitracker">emojitracker</a> is brought to you with :heart: by :man:<a href="http://twitter.com/mroth">mroth</a> and :rocket:<a href="http://twitter.com/rocketws">rocketws</a> &mdash; <a href="#aboutview" data-toggle="modal">more info</a>
+      p#footline.emojifont-restricted
+        | :dizzy:<a href="http://twitter.com/emojitracker">emojitracker</a> is brought to you with :heart: by :man:<a href="http://twitter.com/mroth">mroth</a> &times; :rocket:<a href="http://twitter.com/rocketws">rocketws</a> &mdash; <a href="#aboutview" data-toggle="modal">more info</a>
       br
       br
 
