--- a/views/layout.slim
+++ b/views/layout.slim
@@ -26,6 +26,10 @@ html
       script src='/vendor/fpsmeter/fpsmeter.js'
       script src='/benchmark.js'
 
+    /load kiosk mode css
+    - if @kiosk_mode
+      link href='/assets/kiosk.css' rel='stylesheet'
+
     javascript:
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
