make modal bigass in kiosk mode

--- a/views/kiosk.scss
+++ b/views/kiosk.scss
@@ -34,3 +34,14 @@
 .emoji_char > .score {
   display: none;
 }
+
+.modal {
+  width: 1560px;
+  margin-left: -780px;
+}
+.modal-body {
+  max-height: 600px;
+}
+blockquote p {
+  font-size: 32px;
+}
