--- a/views/layout.slim
+++ b/views/layout.slim
@@ -29,6 +29,10 @@ html
     /load kiosk mode css
     - if @kiosk_mode
       link href='/assets/kiosk.css' rel='stylesheet'
+      coffee:
+        $ ->
+          $('body').addClass('kiosk')
+          $('body').addClass('tiles')
 
     javascript:
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
