--- a/views/layout.slim
+++ b/views/layout.slim
@@ -32,7 +32,8 @@ html
       coffee:
         $ ->
           $('body').addClass('kiosk')
-          $('body').addClass('tiles')
+          $('body').addClass('tiles') if window.location.href.endsWith('tiles')
+          $('body').addClass('small') if window.location.href.endsWith('small')
 
     javascript:
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
