slightly less nerdy about language

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -69,7 +69,7 @@ html
         button.close type="button" data-dismiss="modal" aria-hidden="true" &times;
         h3.emojifont-restricted about emojitracker
       div.modal-body
-        p this is an experiment in realtime tracking of all emoji used on twitter.  it takes advantage of a number of technologies, notably the twitter streaming API, redis, SSE, and other good stuff.  If you're a nerd, you can <a href="http://github.com/mroth/emojitrack">check out the code on github</a> and make it better!
+        p this is an experiment in realtime tracking of all emoji used on twitter.  if you're a nerd, you can <a href="http://github.com/mroth/emojitrack">check out the code on github</a> and make it better!
         h4 like it? spread the word!
         p
           a.twitter-share-button href="https://twitter.com/share" data-lang="en" data-count="horizontal" data-related="rocketws,mroth" data-dnt="true" data-text="emojitracker: visualizing realtime emoji use on twitter" data-url="http://www.emojitracker.com/" Tweet
