--- a/views/layout.slim
+++ b/views/layout.slim
@@ -28,12 +28,8 @@ html
 
     /load kiosk mode css
     - if @kiosk_mode
+      script src='/kiosk.js'
       link href='/assets/kiosk.css' rel='stylesheet'
-      coffee:
-        $ ->
-          $('body').addClass('kiosk')
-          $('body').addClass('tiles') if window.location.href.endsWith('tiles')
-          $('body').addClass('small') if window.location.href.endsWith('small')
 
     javascript:
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
