--- a/views/index.slim
+++ b/views/index.slim
@@ -8,6 +8,7 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
     a#openbtn.close title="open in new tab"
       i.icon-external-link.fake-close
     h3.emojifont-restricted EMOJI NAME
+    div#requester.alert.alert-info.hidden nobody
     dl
       dt unified id
       dd#uid
@@ -46,7 +47,7 @@ javascript:
   var benchmark_mode = #{@benchmark_mode};
   var kiosk_mode  = #{@kiosk_mode};
 coffee:
-  @popDetails = (char_id) ->
+  @popDetails = (char_id, requester = undefined) ->
     $.get("/api/details/#{char_id}", (response) ->
       #populate details for template
       $('#detailview h3').html "#{emoji.replace_unified(response.char)} #{response.char_details.name}"
@@ -58,6 +59,14 @@ coffee:
 
       #construct permalink url
       permalink = "http://emojitracker.com/details/#{char_id}" #document.URL + "details/#{char_id}"
+
+      #only show requester in kiosk mode
+      if requester?
+        $('#detailview #requester').html("Display requested by <strong>@#{requester}</strong>. <img width='48' height='48' src='http://avatars.io/twitter/#{requester}'>")
+        $('#detailview #requester').removeClass('hidden')
+        $('#detailview #requester').show()
+      else
+        $('#detailview #requester').hide()
 
       #replace tweet button with new one
       $('#tweetbtn').empty()
