20px glyphs in small mode, omg i <3 u @ungrok

--- a/views/kiosk.scss
+++ b/views/kiosk.scss
@@ -9,11 +9,13 @@ body.kiosk.small {
     white-space: nowrap;
   }
   .emoji_char > .char {
-    font-size: 16px;
+    font-size: 20px;
+    line-height: 16px;
   }
   .emoji_char > .score {
      padding-left: 0px;
      padding-right: 0px;
+     margin-left: -1px;
      font-size: 0.7em;
   }
 
