--- a/views/layout.slim
+++ b/views/layout.slim
@@ -40,7 +40,7 @@ html
       ga('send', 'pageview');
 
   body
-    div.navbar.navbar-static-top
+    div.navbar.navbar-static-top.visible-desktop
       div.navbar-inner
         a.brand.emojifont-restricted href="/" emojitracker
         ul.nav.pull-right
