hide menubar when bookmarked on mobile safari

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,6 +5,7 @@ html
     title emojitracker: realtime emoji use on twitter
     link rel="icon" type="image/png" href="http://emojistatic.github.io/images/32/1f4ab.png"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
+    meta name="apple-mobile-web-app-capable" content="yes"
 
     /external libraries loaded via CDN
     link href='//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css' rel='stylesheet'
