use hidden bootstrap classes instead
otherwise fucks up kiosk mode!

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -41,7 +41,7 @@ html
       ga('send', 'pageview');
 
   body
-    div.navbar.navbar-static-top.visible-desktop
+    div.navbar.navbar-static-top.hidden-phone.hidden-tablet
       div.navbar-inner
         a.brand.emojifont-restricted href="/" emojitracker
         ul.nav.pull-right
