--- a/views/main.scss
+++ b/views/main.scss
@@ -126,6 +126,9 @@ blockquote p {
  * some hacks for iphone display
  ***************************************/
 @media only screen and (min-device-width : 320px) and (max-device-width: 1024px) {
+  .navbar {
+    display: none;
+  }
   body {
     padding-left: 2px;
     padding-right: 2px;
