--- a/views/stream_admin.slim
+++ b/views/stream_admin.slim
@@ -1,7 +1,7 @@
 div.container
   section#status
     h2
-      | stream admin&nbsp;
+      | stream admin&nbsp;#{ENV['DYNO']}
       
 
     div.tabbable
