force width of data area to fit 1080p
this probably wont fix mystery reflow issue but it eliminates a
variable.

if it doesnt, it means a LI element is somehow growing in size

--- a/views/kiosk.scss
+++ b/views/kiosk.scss
@@ -24,6 +24,7 @@ body.kiosk.small {
     margin-top: -5px;
     margin-left: 5px;
     margin-right: 5px;
+    width: 1910px; //FORCE WIDTH FOR NOW TO AVOID REFLOW BUG?
   }
 }
 
