add twitter icon to timeline
relevant to #18

--- a/views/main.scss
+++ b/views/main.scss
@@ -108,6 +108,10 @@ blockquote p {
 .icon-refresh {
   color: lightgray;
 }
+.icon-twitter {
+  color: #49f;
+  margin-right: .2em;
+}
 /* fuck it lets just force proper alignment of the damn twitter button */
 .modal-footer .twitter-count-horizontal {
   position: relative;
