--- a/views/index.slim
+++ b/views/index.slim
@@ -20,6 +20,7 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
       dd#rank.badge.badge-info #-
   div.modal-body
     h4
+      i.icon-twitter
       | live tweets&nbsp;
       i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
     ul#tweet_list.icons-ul
