make twitter timeline logo link even though thats dumb
closes #18

--- a/views/main.scss
+++ b/views/main.scss
@@ -112,6 +112,9 @@ blockquote p {
   color: #49f;
   margin-right: .2em;
 }
+a:hover .icon-twitter {
+  text-decoration: none;
+}
 /* fuck it lets just force proper alignment of the damn twitter button */
 .modal-footer .twitter-count-horizontal {
   position: relative;
