--- a/views/index.slim
+++ b/views/index.slim
@@ -20,7 +20,8 @@ div#detailview.modal.hide.fade tabindex="-1" role="dialog" aria-labelledby="myMo
       dd#rank.badge.badge-info #-
   div.modal-body
     h4
-      i.icon-twitter
+      a href="http://twitter.com" target="_blank"
+        i.icon-twitter
       | live tweets&nbsp;
       i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
     ul#tweet_list.icons-ul
