put logo on detail page too
re #18

--- a/views/details.slim
+++ b/views/details.slim
@@ -29,6 +29,8 @@ div.container
 
       section#tweets.span9
         h3
+          a href="http://twitter.com" target="_blank"
+            i.icon-twitter
           | live tweets&nbsp;
           i.icon-refresh.icon-spin title="tweets are streaming live from twitter, no need to refresh"
         ul#tweet_list.icons-ul
